# Little-CMS

./: CMakeLists.txt  lcms2Config.cmake.in
